[package]
name = "menu_rs"
version = "0.3.1"
edition = "2021"
keywords = ["menu", "terminal", "console", "cli"]
authors = ["NFSS10"]
description = "A simple command line menu"
license = "Apache-2.0"
homepage = "https://github.com/NFSS10/menu_rs"
repository = "https://github.com/NFSS10/menu_rs"
documentation = "https://docs.rs/menu_rs"
readme = "README.md"

[dependencies]
console = "0.15.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
